fix: complement, middle name and banner adjust

--- a/my-app/src/styles/Carousel_Images.module.css
+++ b/my-app/src/styles/Carousel_Images.module.css
@@ -1,10 +1,15 @@
 .desktop {
-  margin-top: 30px;
   display: flex;
+  width: 100vw;
+  max-height: 600px;
+}
+
+.desktop img {
+  max-height: 600px;
+  object-fit: cover;
 }
 
 .mobile {
-  margin-top: 30px;
   display: none;
 }
 
