--- a/my-app/src/styles/HeaderStyle.module.css
+++ b/my-app/src/styles/HeaderStyle.module.css
@@ -1,100 +1,104 @@
-.logo{
-    border-radius: 5px;;
-    margin-right: 50px;
+.logo {
+  border-radius: 5px;
+  margin-right: 50px;
+  z-index: 1;
+
 }
 
-.header{
-    background-color: var(--black);
-    height: 100px;;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 50px;
-    justify-content: space-between;
+.header {
+  background-color: var(--black);
+  height: 100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 50px;
+  justify-content: space-between;
 }
 
-.options{
-    color: var(--white);
-    font-family: 'Droid Sans', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    margin-right: 20px;
-    background-color: var(--black);
-    border:0px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.options {
+  color: var(--white);
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  margin-right: 20px;
+  background-color: var(--black);
+  border: 0px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.userImage{
-    color: var(--white);
-    display: flex; 
-    align-items: center; 
-    flex-direction: row !important;
-    font-weight: 500;
-    font-size:19px;
-    cursor: pointer;
-  }
-
-  .userImage img{
-    margin-left: 20px;
-  }
-
-.button{
-    position: fixed;
-    bottom:10px;
-    left: 8px;
-    z-index: 2;
-}
-.button button{
-    background-color: var(--light-green);
-    border: 0px;
-    width: 130px;
-    height: 40px;
-    border-radius: 5px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.userImage {
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  flex-direction: row !important;
+  font-weight: 500;
+  font-size: 19px;
+  cursor: pointer;
 }
 
-.userPhoto{
-    display:none;
+.userImage img {
+  margin-left: 20px;
 }
 
-.button p{
-    margin-left: 4px;
-}
-.button button:hover{
-    cursor: pointer;
-    background-color: var(--strong-green);
-}
-
-.register{
-    color: var(--black);
-    font-family: 'Droid Sans', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    margin-right: 20px;
-    background-color: var(--yellow);
-    border:0px;
-    border-radius: 3px;
-    height: 40px;
+.button {
+  position: fixed;
+  bottom: 10px;
+  left: 8px;
+  z-index: 2;
 }
 
-.register:hover{
-    background-color: var(--veryDarkYellow);
-    
-}
-.header div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button button {
+  background-color: var(--light-green);
+  border: 0px;
+  width: 130px;
+  height: 40px;
+  border-radius: 5px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.header button:hover, .header img:hover{
-    cursor: pointer;
-    }
+.userPhoto {
+  display: none;
+}
 
-      
+.button p {
+  margin-left: 4px;
+}
+
+.button button:hover {
+  cursor: pointer;
+  background-color: var(--strong-green);
+}
+
+.register {
+  color: var(--black);
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  margin-right: 20px;
+  background-color: var(--yellow);
+  border: 0px;
+  border-radius: 3px;
+  height: 40px;
+}
+
+.register:hover {
+  background-color: var(--veryDarkYellow);
+
+}
+
+.header div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header button:hover,
+.header img:hover {
+  cursor: pointer;
+}
