--- a/my-app/src/styles/globals.css
+++ b/my-app/src/styles/globals.css
@@ -41,6 +41,7 @@ body {
   --light-red: red;
   --strong-red: rgb(175, 7, 7);
   --light-blue: rgb(0, 0, 255);
+  font-family: 'Exo 2', sans-serif !important;
   position: relative;
 }
 a{
@@ -65,4 +66,5 @@ table {
 
 *{
 	box-sizing: border-box;
+  font-family: 'Exo 2', sans-serif !important;
 }
