--- a/my-app/src/styles/user_page/cart_rental.module.css
+++ b/my-app/src/styles/user_page/cart_rental.module.css
@@ -96,6 +96,14 @@
   flex-direction: column;
   align-items: center;
 }
+
+.second img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 3px;
+  margin-top: 5px;
+}
 .span{
   font-size: 18px;
   color: var(--strong-green);
