--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -194,7 +194,6 @@
 
 .locationsCard{
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
@@ -218,7 +217,11 @@
   margin-top: 10px;
   font-weight: bold;
   margin-bottom: 30px;
+  max-width: 180px;
+  word-wrap: break-word;
+  height: 30px;
 }
+
 .locationsCard button{
   background-color: var(--light-green);
   border:0px;
