--- a/my-app/src/styles/LocationsStyle.module.css
+++ b/my-app/src/styles/LocationsStyle.module.css
@@ -144,12 +144,12 @@
 
 .locationsCard {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
   margin-right: 20px;
   width: 200px;
+  height: 400px;
   margin-bottom: 20px;
   border: 1px solid var(--white);
 }
@@ -174,6 +174,7 @@
 .locationsCard p {
   font-size: 20px;
   margin-bottom: 30px;
+  word-wrap: break-word;
 }
 
 .locationsCard p:nth-child(4) {
@@ -185,6 +186,9 @@
   margin-top: 10px;
   font-weight: bold;
   margin-bottom: 30px;
+  max-width: 180px;
+  height: 30px;
+  word-wrap: break-word;
 }
 
 .locationsCard button {
@@ -244,10 +248,11 @@
 .range button{
   margin-bottom: 20px;
 }
+
 @media (max-width: 800px) {
   .locationsCard {
-    width: 60%;
-    min-width: 200px;
+    width: 40%;
+    margin-right: 0px;
   }
 
   .header {
@@ -397,7 +402,7 @@
 
 }
 
-@media (max-width:500px) {
+@media (max-width:540px) {
 
   .div select,
   .div h1 {
@@ -421,6 +426,26 @@
 
   .locationsCard {
     margin-right: 0px;
+    width: 90%;
   }
 
+  .locationsCard img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .locationsCard h2 {
+    max-width: 80%;
+  }
+
+  .locationsCard button {
+    background-color: var(--veryDarkYellow);
+    border: 0px;
+    border-radius: 3px;
+    height: 50px;
+    width: 120px;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
 }
