--- a/my-app/src/styles/Carousel_Images.module.css
+++ b/my-app/src/styles/Carousel_Images.module.css
@@ -12,6 +12,7 @@
 
 .mobile {
   display: none;
+  
 }
 
 @media (max-width: 800px) {
@@ -21,5 +22,34 @@
   
   .desktop {
     display: none;
+  }
+}
+@media (max-width: 600px) {
+  .mobile img{
+    height: 200px;
+  }
+}
+
+
+
+@media (max-width: 450px) {
+  .mobile img{
+    height: 190px;
+  }
+}
+@media (max-width: 400px) {
+  .mobile img{
+    height: 180px;
+  }
+}
+@media (max-width: 380px) {
+  .mobile img{
+    height: 150px;
+  }
+}
+
+@media (max-width: 340px) {
+  .mobile img{
+    height: 130px;
   }
 }
