--- a/my-app/src/styles/LoginStyle.module.css
+++ b/my-app/src/styles/LoginStyle.module.css
@@ -212,17 +212,18 @@
     }
     .left {
         height:100%;
-        margin-top: 100px;
+        margin-top: 20px;
         margin-right: 0px;
+        margin-bottom: 100px;
     }
     .background{
         display: flex;
         flex-direction: column;
         align-items: center;
+        
     }
     .right{
-        width: 100vw;
-        margin: 10px 0px;
+        display: none;
     }
     .right p:nth-child(3){
         margin-bottom: 0px;
