--- a/my-app/src/styles/globals.css
+++ b/my-app/src/styles/globals.css
@@ -34,6 +34,7 @@ body {
   --veryDarkYellow: rgb(252, 194, 0);
   --lightYellow: rgb(255, 213, 0);
   --gray:rgb(230, 230, 230);
+  --strong-gray:rgb(160, 160, 160);
   --gray-1: rgb(207, 207, 207);
   --gray-light: #dcdcdc;
   --strong-green: #018600;
