--- a/my-app/src/styles/user_page/cart_rental.module.css
+++ b/my-app/src/styles/user_page/cart_rental.module.css
@@ -104,6 +104,23 @@
   border-radius: 3px;
   margin-top: 5px;
 }
+
+.second div {
+  display: flex;
+  flex-direction: column;
+  margin-right: 0px;
+}
+
+.second svg {
+  color: var(--strong-red);
+  margin-top: 5px;
+}
+
+.second svg:hover {
+  cursor: pointer;
+  color: var(--light-red);
+}
+
 .span{
   font-size: 18px;
   color: var(--strong-green);
